--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/msysok/typescript-training#readme",
   "devDependencies": {
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
   }
 }
